# dmp_control

./: .gitignore  README.md
install/: install_frilibrary.sh  main.sh
matlab/: cache.m  exp1.mat  exp2.mat  exp3.mat  output_data.txt  plotRes.m
matlab/28_2/: e.fig  etrack.fig  path.fig  pos.fig
src/dmp_control/: CMakeLists.txt  package.xml
src/dmp_control/config/: init_params.txt
src/dmp_control/include/dmp_control/: Controller.h
src/dmp_control/launch/: dmp_control.launch
src/dmp_control/plot/: PlotErrorNorm.m  PlotFdist.m  plotExecutionData.m  plotModelRunData.m  plotModelWeights.m  plotPath3d.m  plotSimulationData.m  plotTrainingData.m  training_data.mat
src/dmp_control/plot/experiment23_08/: F_dist_fail.fig  Fdist.fig  normError.fig  path3d1.fig
src/dmp_control/plot/utils/: plotData.m  plot_estimation_results.m
src/dmp_control/src/: Controller.cpp  LWR4p_Robot.cpp  example.cpp  main.cpp
src/lib/dmp_lib/include/dmp_lib/: dmp_lib.h
src/lib/dmp_lib/include/dmp_lib/DMP/: DMP.h
src/lib/dmp_lib/src/CanonicalClock/: CanonicalClock.cpp
src/lib/dmp_lib/src/DMP/: DMP.cpp
src/lib/kuka_lwr4p/autharl_core/: .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  LICENSE.md  README.md  circle.yml  install_frilibrary.sh  package.xml  rosdoc.yml
src/lib/kuka_lwr4p/autharl_core/include/autharl_core/: core.h  math.h  robot.h  utils.h  viz.h
src/lib/kuka_lwr4p/autharl_core/include/autharl_core/math/: filters.h  orientation.h  plane.h  rotation.h  screw.h  skew_symmetric.h
src/lib/kuka_lwr4p/autharl_core/include/autharl_core/robot/: arm_hand_controller.h  controller.h  model.h  robot.h  robot_sim.h  state.h  trajectories.h
src/lib/kuka_lwr4p/autharl_core/include/autharl_core/utils/: arma_ros.h  kdl_arma.h  kdl_eigen.h  kdl_ros.h  string.h
src/lib/kuka_lwr4p/autharl_core/include/autharl_core/viz/: ros_state_publisher.h  rvisualizer.h
src/lib/kuka_lwr4p/autharl_core/src/math/: filters.cpp  orientation.cpp  plane.cpp  rotation.cpp  screw.cpp  skew_symmetric.cpp
src/lib/kuka_lwr4p/autharl_core/src/robot/: arm_hand_controller.cpp  controller.cpp  model.cpp  robot.cpp  robot_sim.cpp  state.cpp  trajectories.cpp
src/lib/kuka_lwr4p/autharl_core/src/utils/: arma_ros.cpp  kdl_arma.cpp  kdl_eigen.cpp  kdl_ros.cpp  string.cpp
src/lib/kuka_lwr4p/autharl_core/src/viz/: ros_state_publisher.cpp  rvisualizer.cpp
src/lib/kuka_lwr4p/autharl_core/test/src/: test_autharl_core.cpp
src/lib/kuka_lwr4p/autharl_core/test/src/math/: test_orientation.cpp  test_plane.cpp  test_rotation.cpp  test_skew_symmetric.cpp
src/lib/kuka_lwr4p/autharl_core/test/src/robot/: test_model.cpp
src/lib/kuka_lwr4p/autharl_core/test/src/utils/: test_map_arma_to_kdl.cpp  test_map_kdl_to_arma.cpp  test_string.cpp
src/lib/kuka_lwr4p/autharl_fri/: .gitignore  Dockerfile  README.md  circle.yml
src/lib/kuka_lwr4p/autharl_fri/lwr_robot/: CMakeLists.txt  package.xml
src/lib/kuka_lwr4p/autharl_fri/lwr_robot/cmake/: FindFastResearchInterfaceLibrary.cmake
src/lib/kuka_lwr4p/autharl_fri/lwr_robot/include/lwr_robot/: lwr_model.h  lwr_robot.h
src/lib/kuka_lwr4p/autharl_fri/lwr_robot/src/lwr_robot/: lwr_model.cpp  lwr_robot.cpp
src/lib/math_lib/include/math_lib/: math.h
src/lib/math_lib/src/: math.cpp
