<?xml version="1.0"?>
<package>
  <name>dmp_control</name>
  <version>0.0.0</version>
  <description>DMP</description>

  <maintainer email="antosidi646@gmail.com">Antonis Sidiropoulos</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>roslib</build_depend>
  <run_depend>roslib</run_depend>

  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>

  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_generation</run_depend>

  <build_depend>message_runtime</build_depend>
  <run_depend>message_runtime</run_depend>

  <build_depend>dmp_lib</build_depend>
  <run_depend>dmp_lib</run_depend>
  <build_depend>io_lib</build_depend>
  <run_depend>io_lib</run_depend>
  <build_depend>math_lib</build_depend>
  <run_depend>math_lib</run_depend>

  <build_depend>autharl_core</build_depend>
  <run_depend>autharl_core</run_depend>

  <build_depend>kuka_lwr</build_depend>
  <run_depend>kuka_lwr</run_depend>

  <build_depend>autharl_robot</build_depend>
  <run_depend>autharl_robot</run_depend>

  <build_depend>lwr_robot</build_depend>
  <run_depend>lwr_robot</run_depend>

<!--
  <build_depend>robot_sim</build_depend>
  <run_depend>robot_sim</run_depend>
-->

</package>
