<?xml version="1.0"?>
<package>
  <name>lwr_robot</name>
  <version>1.0.0</version>
  <description>The lwr_robot package</description>

  <maintainer email="thprapav@gmail.com">Theofanis Prapavesis Semetzidis</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>autharl_core</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>armadillo</build_depend>
  <build_depend>kdl_parser</build_depend>

  <run_depend>autharl_core</run_depend>
  <run_depend>roscpp</run_depend>

  <export></export>
</package>
